--- a/client/views/login.html
+++ b/client/views/login.html
@@ -3,12 +3,17 @@
     @brief the AngularJS partial 'about'
 -->
 
-<h1>My application - {{'MAIN' | translate}}</h1>
+<center>
 
+<h1>{{'Login or register' | translate}}</h1>
 <div ng-controller="loginController">
 <form ng-submit="on_submit_login()">
+<br>
 <input name="account_name" ng-model="account_name" required>
-<input name="account_password" ng-model="account_password" required>
+<br>
+<input type="password" name="account_password" ng-model="account_password" required>
+<br><br>
 <input type="submit">
 </form>
 </div>
+</center>
