--- a/client/views/play.html
+++ b/client/views/play.html
@@ -4,23 +4,19 @@
 -->
 
 <center>
-<h1>My application - {{'MAIN' | translate}}</h1>
-<body ng-controller="gameController">
+<h1>{{'The game board' | translate}}</h1>
+<body>
+<div ng-controller="gameController">
 
-<div>
 <div class="gameboard">
 
-<table class="gametable">
+<table class="gametable" id="gametable_id">
 <td class="boardtitle" colspan="8"> {{ 'Ships' | translate }} </td> <td/> <td class="boardtitle" colspan="8"> {{ 'Shots' | translate }} </td>
 <tr class="gamerow" ng-repeat="y in [0, 1, 2, 3, 4, 5, 6, 7]">
-	<td class="gamecell" ng-repeat="x in [0, 1, 2, 3, 4, 5, 6, 7]">
-		<div class="gamediv">
-		</div>
+	<td class="gamecell {{'shiptile'+shiplist[x][y]}}" ng-repeat="x in [0, 1, 2, 3, 4, 5, 6, 7]">
 	</td>
 	<td style="width:10em"/>
-	<td class="gamecell" ng-repeat="x in [0, 1, 2, 3, 4, 5, 6, 7]">
-		<div class="gamediv" ng-click="clicked_gamecell(1, 3);">
-		<div/>
+	<td class="gamecell {{'shottile'+shotlist[x][y]}}" ng-repeat="x in [0, 1, 2, 3, 4, 5, 6, 7]" ng-click="clicked_gamecell(x, y)">
 	</td>
 </tr>
 </table>
