--- a/client/views/play.html
+++ b/client/views/play.html
@@ -13,10 +13,10 @@
 <table class="gametable" id="gametable_id">
 <td class="boardtitle" colspan="8"> {{ 'Ships' | translate }} </td> <td/> <td class="boardtitle" colspan="8"> {{ 'Shots' | translate }} </td>
 <tr class="gamerow" ng-repeat="y in [0, 1, 2, 3, 4, 5, 6, 7]">
-	<td class="gamecell {{'shiptile'+shiplist[x][y]}}" ng-repeat="x in [0, 1, 2, 3, 4, 5, 6, 7]">
+	<td class="gamecell own {{turn}} {{'shiptile'+shiplist[x][y]}}" ng-repeat="x in [0, 1, 2, 3, 4, 5, 6, 7]">
 	</td>
 	<td style="width:10em"/>
-	<td class="gamecell {{'shottile'+shotlist[x][y]}}" ng-repeat="x in [0, 1, 2, 3, 4, 5, 6, 7]" ng-click="clicked_gamecell(x, y)">
+	<td class="gamecell enemy {{turn}} {{'shottile'+shotlist[x][y]}}" ng-repeat="x in [0, 1, 2, 3, 4, 5, 6, 7]" ng-click="clicked_gamecell(x, y)">
 	</td>
 </tr>
 </table>
