--- a/client/views/login.html
+++ b/client/views/login.html
@@ -7,13 +7,20 @@
 
 <h1>{{'Login or register' | translate}}</h1>
 <div ng-controller="loginController">
-<form ng-submit="on_submit_login()">
 <br>
 <input name="account_name" ng-model="account_name" required>
 <br>
 <input type="password" name="account_password" ng-model="account_password" required>
 <br><br>
-<input type="submit">
-</form>
+<table class="login_table">
+<td>
+<tr>
+<button class="login_button" ng-click="on_submit_login()"> Login </input>
+</tr>
+<tr>
+<button class="login_button" ng-click="on_submit_register()"> Register </input>
+</tr>
+</td>
+</table>
 </div>
 </center>
