--- a/client/views/play.html
+++ b/client/views/play.html
@@ -10,11 +10,11 @@
 <div class="gameboard">
 
 <table class="gametable" id="gametable_id">
-<td class="boardtitle" colspan="8"> {{ 'Ships' | translate }} </td> <td/> <td class="boardtitle" colspan="8"> {{ 'Shots' | translate }} </td>
+<td class="boardtitle" colspan="10"> {{ 'Ships' | translate }} </td> <td style="width:10em"/> <td class="boardtitle" colspan="10"> {{ 'Shots' | translate }} </td>
 <tr class="gamerow" ng-repeat="y in [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]">
 	<td class="gamecell own {{turn}} {{'shiptile'+shiplist[x][y]}}" ng-repeat="x in [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]">
 	</td>
-	<td style="width:10em"/>
+	<td/>
 	<td class="gamecell enemy {{turn}} {{'shottile'+shotlist[x][y]}}" ng-repeat="x in [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]" ng-click="clicked_gamecell(x, y)">
 	</td>
 </tr>
