Added game list handling on user leave and entry

--- a/client/views/login.html
+++ b/client/views/login.html
@@ -5,7 +5,7 @@
 
 <center>
 
-<h1>{{'Login or register' | translate}}</h1>
+<h1>Login or register</h1>
 <div ng-controller="loginController">
 <br>
 <input name="account_name" ng-model="account_name" required>
