--- a/client/views/play.html
+++ b/client/views/play.html
@@ -5,7 +5,7 @@
 
 <center>
 <div ng-controller="gameController">
-<h1>{{'Board' | translate}}{{" "+game}}</h1>
+<h1>Board {{" "+game}}</h1>
 
 <div class="gameboard">
 
